We can build!
- Never said it was stable

- Added many other blocks to blockstate datagen

- Fixed some recipe parsing

- Moved food blocks to block/food